import {GrpcWebFetchTransport} from '@protobuf-ts/grpcweb-transport'
import {RpcdemoClient} from "./rpc/rpcdemo/rpcdemo.client";
import {
    CreateRpcDemoRequest,
    DeleteRpcDemoRequest,
    SelectRpcDemoRequest,
    UpdateRpcDemoRequest
} from "./rpc/rpcdemo/rpcdemo";

console.log("=".repeat(50))
console.log('ğŸš€ RpcDemo CRUD Service Demo')
console.log("=".repeat(50))

// Create shared transport instance
// åˆ›å»ºå…±äº«çš„ä¼ è¾“å®ä¾‹
const demoTransport = new GrpcWebFetchTransport({
    baseUrl: "http://127.0.0.1:18000",
    meta: {
        Authorization: 'TOKEN-888',
    },
});

const rpcdemoClient = new RpcdemoClient(demoTransport)

// Demo CreateRpcDemo interface
// æ¼”ç¤º CreateRpcDemo æ¥å£
async function demoCreateRpcDemo() {
    console.log("\nğŸ”¨ ã€CreateRpcDemo Interface Demoã€‘")
    console.log("-".repeat(30))

    const request = CreateRpcDemoRequest.create({
        code: "DEMO001",
        name: "Vue3 Kratos Demo",
        type: "frontend"
    })

    try {
        const response = await rpcdemoClient.createRpcDemo(request, {})
        console.log('âœ… Create success:')
        console.log(`   Created code: ${response.data.code}`)
        return response.data.code
    } catch (err) {
        console.error('âŒ Create failed:', err)
        throw err
    }
}

// Demo UpdateRpcDemo interface
// æ¼”ç¤º UpdateRpcDemo æ¥å£
async function demoUpdateRpcDemo(code: string) {
    console.log("\nğŸ“ ã€UpdateRpcDemo Interface Demoã€‘")
    console.log("-".repeat(30))

    const request = UpdateRpcDemoRequest.create({
        code: code,
        name: "Updated Vue3 Kratos Demo"
    })

    try {
        const response = await rpcdemoClient.updateRpcDemo(request, {})
        console.log('âœ… Update success:')
        console.log(`   Updated data:`, response.data)
        return response.data
    } catch (err) {
        console.error('âŒ Update failed:', err)
        throw err
    }
}

// Demo SelectRpcDemo interface
// æ¼”ç¤º SelectRpcDemo æ¥å£
async function demoSelectRpcDemo() {
    console.log("\nğŸ” ã€SelectRpcDemo Interface Demoã€‘")
    console.log("-".repeat(30))

    const request = SelectRpcDemoRequest.create({
        type: "frontend"
    })

    try {
        const response = await rpcdemoClient.selectRpcDemo(request, {})
        console.log(`âœ… Select success, found ${response.data.demos.length} demos:`)
        response.data.demos.forEach((item, index) => {
            console.log(`   Demo ${index + 1}:`, item)
        })
        return response.data.demos
    } catch (err) {
        console.error('âŒ Select failed:', err)
        throw err
    }
}

// Demo DeleteRpcDemo interface
// æ¼”ç¤º DeleteRpcDemo æ¥å£
async function demoDeleteRpcDemo(code: string) {
    console.log("\nğŸ—‘ï¸  ã€DeleteRpcDemo Interface Demoã€‘")
    console.log("-".repeat(30))

    const request = DeleteRpcDemoRequest.create({
        code: code
    })

    try {
        const response = await rpcdemoClient.deleteRpcDemo(request, {})
        console.log('âœ… Delete success:')
        console.log(`   Deleted code: ${response.data.code}`)
        return response.data.code
    } catch (err) {
        console.error('âŒ Delete failed:', err)
        throw err
    }
}

// Run complete CRUD demo flow
// æ‰§è¡Œå®Œæ•´çš„ CRUD æ¼”ç¤ºæµç¨‹
async function runCrudDemo() {
    try {
        // 1. Create
        // 1. åˆ›å»º
        const createdCode = await demoCreateRpcDemo()

        // 2. Update
        // 2. æ›´æ–°
        await demoUpdateRpcDemo(createdCode)

        // 3. Select
        // 3. æŸ¥è¯¢
        await demoSelectRpcDemo()

        // 4. Delete
        // 4. åˆ é™¤
        await demoDeleteRpcDemo(createdCode)

        console.log("\n" + "=".repeat(50))
        console.log('ğŸ‰ RpcDemo CRUD demo completed with success!')
        console.log("=".repeat(50))

    } catch (err) {
        console.error('\nâŒ Error during CRUD demo:', err)
        console.log("=".repeat(50))
    }
}

// Start demo
// å¯åŠ¨æ¼”ç¤º
runCrudDemo()