import {GrpcWebFetchTransport} from '@protobuf-ts/grpcweb-transport'

// Import all clients
// å¯¼å…¥æ‰€æœ‰å®¢æˆ·ç«¯
import {GreeterClient} from "./rpc/helloworld/v1/greeter.client";
import {RpcdemoClient} from "./rpc/rpcdemo/rpcdemo.client";
import {RpcpingClient} from "./rpc/rpcping/rpcping.client";

// Import all message types
// å¯¼å…¥æ‰€æœ‰æ¶ˆæ¯ç±»åž‹
import {HelloRequest} from "./rpc/helloworld/v1/greeter";
import {
    CreateRpcDemoRequest,
    DeleteRpcDemoRequest,
    SelectRpcDemoRequest,
    UpdateRpcDemoRequest
} from "./rpc/rpcdemo/rpcdemo";
import {StringValue} from "./rpc/google/protobuf/wrappers";

console.log("=".repeat(50))
console.log('ðŸš€ Vue3 Kratos Complete Service Integration Demo')
console.log("=".repeat(50))

// Create shared transport instance
// åˆ›å»ºå…±äº«çš„ä¼ è¾“å®žä¾‹
const demoTransport = new GrpcWebFetchTransport({
    baseUrl: "http://127.0.0.1:18000",
    meta: {
        Authorization: 'TOKEN-888',
    },
});

// Create all client instances
// åˆ›å»ºæ‰€æœ‰å®¢æˆ·ç«¯å®žä¾‹
const greeterClient = new GreeterClient(demoTransport)
const rpcdemoClient = new RpcdemoClient(demoTransport)
const rpcpingClient = new RpcpingClient(demoTransport)

// 1. Greeter Service Demo
// 1. Greeter æœåŠ¡æ¼”ç¤º
async function demoGreeterService() {
    console.log("\nðŸ“¢ ã€Greeter Service Demoã€‘")
    console.log("-".repeat(30))

    const request = HelloRequest.create({
        name: "Vue3 Kratos Integration"
    })

    try {
        const response = await greeterClient.sayHello(request, {})
        console.log('âœ… Greeter call success:')
        console.log(`   Request: name = "${request.name}"`)
        console.log(`   Response: message = "${response.data.message}"`)
        return true
    } catch (err) {
        console.error('âŒ Greeter call failed:', err)
        return false
    }
}

// 2. RpcPing Service Demo
// 2. RpcPing æœåŠ¡æ¼”ç¤º
async function demoRpcPingService() {
    console.log("\nðŸ“ ã€RpcPing Service Demoã€‘")
    console.log("-".repeat(30))

    const request = StringValue.create({
        value: "Complete Integration Ping Test"
    })

    try {
        const response = await rpcpingClient.ping(request, {})
        console.log('âœ… Ping call success:')
        console.log(`   Request: value = "${request.value}"`)
        console.log(`   Response: value = "${response.data.value}"`)
        return true
    } catch (err) {
        console.error('âŒ Ping call failed:', err)
        return false
    }
}

// 3. RpcDemo CRUD Service Demo
// 3. RpcDemo CRUD æœåŠ¡æ¼”ç¤º
async function demoRpcDemoService() {
    console.log("\nðŸ“‹ ã€RpcDemo CRUD Service Demoã€‘")
    console.log("-".repeat(30))

    let isSuccess = true

    try {
        // Create operation
        // åˆ›å»ºæ“ä½œ
        console.log('ðŸ”¨ Executing Create operation...')
        const createRequest = CreateRpcDemoRequest.create({
            code: "ALL_DEMO_001",
            name: "Complete Integration Demo",
            type: "integration"
        })
        const createResponse = await rpcdemoClient.createRpcDemo(createRequest, {})
        console.log(`âœ… Create success, code: ${createResponse.data.code}`)

        // Update operation
        // æ›´æ–°æ“ä½œ
        console.log('ðŸ“ Executing Update operation...')
        const updateRequest = UpdateRpcDemoRequest.create({
            code: createResponse.data.code,
            name: "Complete Integration Demo (Updated)"
        })
        const updateResponse = await rpcdemoClient.updateRpcDemo(updateRequest, {})
        console.log(`âœ… Update success, updated data:`, updateResponse.data)

        // Select operation
        // æŸ¥è¯¢æ“ä½œ
        console.log('ðŸ” Executing Select operation...')
        const selectRequest = SelectRpcDemoRequest.create({
            type: "integration"
        })
        const selectResponse = await rpcdemoClient.selectRpcDemo(selectRequest, {})
        console.log(`âœ… Select success, found ${selectResponse.data.demos.length} records:`)
        selectResponse.data.demos.forEach((item, index) => {
            console.log(`   ${index + 1}. code:${item.code}, name:${item.name}, type:${item.type}`)
        })

        // Delete operation
        // åˆ é™¤æ“ä½œ
        console.log('ðŸ—‘ï¸  Executing Delete operation...')
        const deleteRequest = DeleteRpcDemoRequest.create({
            code: createResponse.data.code
        })
        const deleteResponse = await rpcdemoClient.deleteRpcDemo(deleteRequest, {})
        console.log(`âœ… Delete success, deleted code: ${deleteResponse.data.code}`)

    } catch (err) {
        console.error('âŒ RpcDemo CRUD operations failed:', err)
        isSuccess = false
    }

    return isSuccess
}

// Statistics and report function
// ç»Ÿè®¡å’ŒæŠ¥å‘Šå‡½æ•°
function printSummary(results: { service: string, success: boolean }[]) {
    console.log("\n" + "=".repeat(50))
    console.log('ðŸ“Š Demo Results Summary')
    console.log("=".repeat(50))

    const successCount = results.filter(r => r.success).length
    const totalCount = results.length

    results.forEach(result => {
        const status = result.success ? 'âœ… Success' : 'âŒ Failed'
        console.log(`${status} ${result.service}`)
    })

    console.log("-".repeat(30))
    console.log(`ðŸ“ˆ Overall Success Rate: ${successCount}/${totalCount} (${((successCount / totalCount) * 100).toFixed(1)}%)`)

    if (successCount === totalCount) {
        console.log('ðŸŽ‰ Congratulations! All service demos completed with success!')
        console.log('ðŸš€ Vue3 Kratos integration works as expected!')
    } else {
        console.log('âš ï¸  Some service demos failed, check service status')
    }
}

// Main demo flow
// ä¸»æ¼”ç¤ºæµç¨‹
async function runCompleteDemo() {
    const results: { service: string, success: boolean }[] = []

    console.log('ðŸ”„ Starting complete service integration demo...\n')

    // Execute all demos in sequence
    // æŒ‰é¡ºåºæ‰§è¡Œæ‰€æœ‰æ¼”ç¤º
    results.push({
        service: 'Greeter Service',
        success: await demoGreeterService()
    })

    results.push({
        service: 'RpcPing Service',
        success: await demoRpcPingService()
    })

    results.push({
        service: 'RpcDemo CRUD Service',
        success: await demoRpcDemoService()
    })

    // Print summary report
    // æ‰“å°æ±‡æ€»æŠ¥å‘Š
    printSummary(results)

    console.log("\n" + "=".repeat(50))
    console.log('ðŸ Vue3 Kratos Complete Service Integration Demo Ended')
    console.log("=".repeat(50))
}

// Start complete demo
// å¯åŠ¨å®Œæ•´æ¼”ç¤º
runCompleteDemo().catch(err => {
    console.error('Unhandled error during demo:', err)
})